--- a/examples/merlin.toml
+++ b/examples/merlin.toml
@@ -14,19 +14,76 @@ backend =
 
 # source =
 
-# Channel constants are a path string "CHANNEL_ID"
+#################### DISCORD #####################
+
+# Channel objects are a path string "CHANNEL_ID"
 # OR a list of them: ["CHANNEL_ID", ...]
 # OR a refrence to a channel: "channel://NAME"
 
 [config.discord]
-# `inbound` and `outbound` must be channel constants
+# `inbound` and `outbound` must be either:
+#   - channel objects
+#   - strings
+#   - list of strings ([CHANNEL_ID, ...])
+
 inbound = "channel"
 # outbound = inbound
 
 token = "token"
 # bot = true
 
+[[discord.channel]]
+# NOTE:
+#   Channel names do not correspond with
+#   the channels actual name, it is only
+#   used to refrence channel objects inside
+#   the configuration with "channel://{name}"
+name = "blah"
+
+# The snowflake ID of the channel.
+id = 1234567890
+
+#################### IRC #########################
+
 [config.irc]
-# `inbound` and `outbound` must be channel constants
 inbound = "channel"
 # outbound = inbound
+
+[[irc.channel]]
+# The network to use.
+network = "network://default"
+
+[[irc.network]]
+# NOTE:
+#   Network names do not hold any real value
+#   they are used to refrence network objects inside
+#   the configuration with "network://{name}"
+name = "default"
+
+# The domain name address
+host = "irc.rizon.net"
+
+# The port to connect to
+# port = 6667
+
+# tls = true
+# tls_verify = false
+
+#################### TCP ########################
+
+[config.tcp]
+inbound = "channel"
+# outbound = inbound
+
+[tcp.server]
+
+
+#################### TWITCH #####################
+
+[config.twitch]
+
+[twitch.channel]
+
+#################### SLACK ######################
+
+[config.slack]
